--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,6 @@
         <title>Adam Hite's Resume | Front-End Developer | Austin, TX</title>
         <meta name="description" content="I am an Austin-based front-end developer who believes in building fast, accessible, and responsive websites.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/resume.css">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -14,6 +13,7 @@
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6161ff">
         <meta name="msapplication-TileColor" content="#e3551d">
         <meta name="theme-color" content="#ffffff">
+        <style>@font-face{font-family:courier_primeregular;src:url(/fonts/courier_prime-webfont.woff2) format('woff2'),url(/fonts/courier_prime-webfont.woff) format('woff');font-weight:400;font-style:normal}@font-face{font-family:gilroy-extrabold;src:url(/fonts/gilroy-extrabold-webfont.woff2) format('woff2'),url(/fonts/gilroy-extrabold-webfont.woff) format('woff');font-weight:400;font-style:normal}*,::after,::before{box-sizing:border-box}ul[class]{padding:0}body,h1,h2,h3,h4,li,p,ul[class]{margin:0}body{font-display:swap;min-height:100vh;scroll-behavior:smooth;text-rendering:optimizeSpeed;line-height:1.5}ul[class]{list-style:none}a:not([class]){-webkit-text-decoration-skip:ink;text-decoration-skip-ink:auto}img{max-width:100%;display:block}article>*+*{margin-top:1em}@media (prefers-reduced-motion:reduce){*{-webkit-animation-duration:0s!important;animation-duration:0s!important;-webkit-animation-iteration-count:1!important;animation-iteration-count:1!important;-webkit-transition-duration:0s!important;transition-duration:0s!important;scroll-behavior:auto!important}}.flow{--flow-space:1em}.flow>*+*{margin-top:1em;margin-top:var(--flow-space)}.flow h1+h2{margin:0}.flow>h3+*{margin-top:1.5rem}a{color:#004cff}h1,h2,h3{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-family:gilroy-extrabold;font-weight:400}h1{font-size:2rem}h2{color:#757575;font-size:1.5rem;font-style:italic}h3{font-size:1.5rem}h4{font-family:Arial,Helvetica,sans-serif;font-size:1.15rem;font-weight:400}h4 strong{font-family:gilroy-extrabold;font-weight:700}.resume{font-family:courier_primeregular;font-size:16px;display:-ms-grid;display:grid;grid-gap:2vw;grid-template-areas:"photo" "name" "about" "work" "skills" "education" "community";-ms-grid-columns:1fr;grid-template-columns:1fr;-ms-grid-rows:minmax(250px,auto);grid-template-rows:minmax(250px,auto);margin:0 auto;max-width:1440px;padding:2vw 6vw}@media only screen and (min-width:780px){.resume{grid-template-areas:"name  photo" "work  about" "work  skills" "education community";-ms-grid-columns:2fr 2vw 1fr;grid-template-columns:2fr 1fr;-ms-grid-rows:minmax(250px,250px) 2vw 1fr 2vw 1fr 2vw 1fr;grid-template-rows:minmax(250px,250px) 1fr 1fr 1fr}}.name{-ms-grid-row:3;-ms-grid-column:1;display:-webkit-box;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column;grid-area:name;-webkit-box-pack:center;justify-content:center}.name p{margin-top:.5rem}.photo{-ms-grid-row:1;-ms-grid-column:1;-webkit-box-align:center;align-items:center;display:-webkit-box;display:flex;grid-area:photo;-webkit-box-pack:center;justify-content:center}.photo picture{border-radius:50%;height:250px;overflow:hidden;width:250px}.about{-ms-grid-row:5;-ms-grid-column:1;grid-area:about}.work{-ms-grid-row:7;-ms-grid-column:1;grid-area:work}.education{-ms-grid-row:11;-ms-grid-column:1;grid-area:education}.skills{-ms-grid-row:9;-ms-grid-column:1;grid-area:skills}.community{-ms-grid-row:13;-ms-grid-column:1;grid-area:community}@media only screen and (min-width:780px){.name{-ms-grid-row:1;-ms-grid-column:1}.photo{-ms-grid-row:1;-ms-grid-column:3}.about{-ms-grid-row:3;-ms-grid-column:3}.work{-ms-grid-row:3;-ms-grid-row-span:3;-ms-grid-column:1}.education{-ms-grid-row:7;-ms-grid-column:1}.skills{-ms-grid-row:5;-ms-grid-column:3}.community{-ms-grid-row:7;-ms-grid-column:3}}.resume--date{display:block;font-size:14px;line-height:2;opacity:.75}</style>
     </head>
     <body>
         <main>
@@ -90,7 +90,5 @@
                 </section>
             </article>
         </main>
-        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-        <script>WebFont.load({google: {families: ['Libre Baskerville', 'Open Sans']}});</script>
     </body>
 </html>
